// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compositions Login calls the onLogin callback with the entered data. 1`] = `
<Component
  isLogin={true}
  marketingText={
    <React.Fragment>
      <ForwardRef
        color="#fff"
      >
        Web images done right.
      </ForwardRef>
    </React.Fragment>
  }
>
  <form
    onSubmit={[Function]}
  >
    <Component
      label="Organization"
    >
      <styled.input
        name="organization"
        onChange={[Function]}
        type="text"
        value="an-organization"
      />
    </Component>
    <Component
      label="API Key"
    >
      <styled.input
        name="apiKey"
        onChange={[Function]}
        type="password"
        value="a password"
      />
    </Component>
    <Component
      type="submit"
    >
      Login
    </Component>
  </form>
</Component>
`;

exports[`Compositions Login renders the login form correctly. 1`] = `
<Component
  isLogin={true}
  marketingText={
    <React.Fragment>
      <ForwardRef
        color="#fff"
      >
        Web images done right.
      </ForwardRef>
    </React.Fragment>
  }
>
  <form
    onSubmit={[Function]}
  >
    <Component
      label="Organization"
    >
      <styled.input
        name="organization"
        onChange={[Function]}
        type="text"
        value=""
      />
    </Component>
    <Component
      label="API Key"
    >
      <styled.input
        name="apiKey"
        onChange={[Function]}
        type="password"
        value=""
      />
    </Component>
    <Component
      type="submit"
    >
      Login
    </Component>
  </form>
</Component>
`;
